--- a/index.html
+++ b/index.html
@@ -2,24 +2,30 @@
 	session_start();
 ?>-->
 
-<html>
+<html ng-app="PucknoTournament">
 	<head>
+		<meta charset="utf-8">
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/stylesheet.css" rel="stylesheet">
+		<!--<link href="css/stylesheet.css" rel="stylesheet">-->
+
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0rc3/angular.min.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0rc3/angular-route.min.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0rc3/angular-resource.min.js"></script>
+		
+		<script style="text/javascript" src="js/app.js"></script>
+		<script style="text/javascript" src="js/utils.js"></script>
+		<script style="text/javascript" src="js/controllers.js"></script>
+		<script style="text/javascript" src="js/services.js"></script>
+		<script style="text/javascript" src="js/filters.js"></script>
 	</head>
 
-	<body ng-app="PuckTournaments">
+	<body ng-app="PucknoTournament">
 		<nav class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation"></nav>
 		
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<ui-view></ui-view>
+			<div class="col-md-6 col-md-offset-3" ng-view>
 			</div>
 		</div>
 	</body>
-
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
-	<script tyle="text/javascript" src="js/app.js"></script>
 </html>
