refactored to using ui-router

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0rc3/angular.min.js"></script>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0rc3/angular-route.min.js"></script>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0rc3/angular-resource.min.js"></script>
+		<script style="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
 		
 		<script style="text/javascript" src="js/app.js"></script>
 		<script style="text/javascript" src="js/utils.js"></script>
@@ -24,7 +25,8 @@
 		<nav class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation"></nav>
 		
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3" ng-view>
+			<div class="col-md-6 col-md-offset-3" ui-view>
+			<!-- <div class="col-md-6 col-md-offset-3" ng-view> -->
 			</div>
 		</div>
 	</body>
