--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-		<!--<link href="css/stylesheet.css" rel="stylesheet">-->
+		<!-- <link href="css/stylesheet.css" rel="stylesheet"> -->
 
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0rc3/angular.min.js"></script>
@@ -21,13 +21,9 @@
 		<script style="text/javascript" src="js/filters.js"></script>
 	</head>
 
-	<body ng-app="PucknoTournament">
-		<nav class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation"></nav>
-		
+	<body ng-app="PucknoTournament"><br/>		
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3" ui-view>
-			<!-- <div class="col-md-6 col-md-offset-3" ng-view> -->
-			</div>
+			<div class="col-md-6 col-md-offset-3" ui-view></div>
 		</div>
 	</body>
 </html>
