--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		
 		<script style="text/javascript" src="js/app.js"></script>
 		<script style="text/javascript" src="js/utils.js"></script>
+		<!-- <script style="text/javascript" src="js/localization.js"></script> -->
 		<script style="text/javascript" src="js/controllers.js"></script>
 		<script style="text/javascript" src="js/services.js"></script>
 		<script style="text/javascript" src="js/filters.js"></script>
